--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -33,4 +33,4 @@ es:
   hello: "Hola Mundo!"
   errors:
     review:
-      too_long: "La reseña debe tener como máximo {count} palabras"
+      too_long: "La reseña debe tener como máximo %{count} palabras."
